<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/commencer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/commencer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commencer"
        android:id="@+id/charger"
        android:text="@string/charger" />

    <Button
        android:id="@+id/quitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/quitter" />

</RelativeLayout>